Updates to use a new SequencedCollection method.